# nw

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  makefile
.cache/clangd/index/: connection.cpp.EA5ACDAFE03A25D7.idx  main.cpp.BF2A72BF01B18E17.idx
include/: CMakeLists.txt  connection.hpp  hypixel_connection.hpp  json_reader.hpp
src/: CMakeLists.txt  connection.cpp  hypixel_connection.cpp  json_reader.cpp  main.cpp  tempCodeRunnerFile.cpp
